fix for smoketest blocker bug #111242.  menus not doing anything.patch by pink.