widget/macbuild/WidgetSupportConfig.h
@@ -1,3 +1,7 @@
 
 
 #define _IMPL_NS_WIDGET 1
+
+#if !TARGET_CARBON
+#define USE_MENUSELECT 1
+#endif
